--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,6 +4,7 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 .winbox{
+    position: absolute;
     margin: 0;
     display: flex;
     height: 100vh;
