--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,6 +2,19 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  overflow: hidden;
+}
+.os-div{
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100vw;
+    p{
+        margin: 0;
+        padding: 0;
+    
+    }
+    
 }
 .winbox{
     position: absolute;
