--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -77,6 +77,7 @@
     15px 15px 0 rgba(0, 0, 0, 0.6),  /* Main shadow */
     15px 15px 0 rgba(0, 0, 0, 0.6); 
     overflow: scroll;
+    // padding: ;
 }
 .wb-body::-webkit-scrollbar{
     border-radius: 20px;
@@ -207,8 +208,10 @@
 }
 .app-directory-container{
     position: relative;
+    opacity: 1;
 }
 .app-directory-menu{
+    opacity: 1;
     position: absolute;
     bottom: 150%; /* This positions the menu above the taskbar */
     // left: 0;
@@ -216,11 +219,29 @@
     border: 3px solid black;
     border-radius: 10px;
     padding: 10px;
+    height: 150px;
+    
     min-height: 150px;
     min-width: 150px;
     box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.9);
     z-index: 1000;
+    overflow: scroll;
 }
+.app-directory-menu::-webkit-scrollbar{
+    border-radius: 20px;
+    // background-color: aqua;
+
+}
+.app-directory-menu::-webkit-scrollbar-thumb{
+    background-color: rgb(250, 213, 154);
+    // background-image: url("");
+    border-radius: 20px;
+}
+.app-directory-menu::-webkit-scrollbar-corner {
+    // background-color: red;
+    border-radius: 30px; /* or any color you prefer */
+  }
+
 .taskbar-elements:hover{
     background-color: rgb(0, 0, 0);
 }
@@ -244,4 +265,23 @@
     .menu-svg{
         filter: invert(1) brightness(100%);
     }
+}
+.textArea{
+    margin-top: 1rem;
+    margin-left: 1rem;
+    background-color: transparent;
+    // bottom: none;
+    border-style: none; 
+    border-color: Transparent; 
+    overflow:visible ;
+    resize: none;
+    height: 96%;
+    width: 97%;
+    padding: 0;
+    font-size: large;
+    font-family: inherit;
+    
+}
+.textArea:focus{
+    outline: none;
 }
